# sml-python-small

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .pylintrc  .readthedocs.yml  404.html  CODEOWNERS  README.md  README.rst  catalog-info.yaml  get_design_system.sh  index.html  mkdocs.yml  objects.inv  pyproject.toml  run_py_tools.sh  sitemap.xml  testing_output.csv
.github/: pull_request_template.md
.github/workflows/: ci-checks.yaml  package-release-artifact.yml
api-docs/: index.html
components/checkboxes/: checkbox-with-fieldset.js
content/: index.html
dateadjustment/: index.html
docs/: conf.py  content.md  date_adjustment.md  dateadjustment.rst  index.md  index.rst  methoddocs.rst  pounds_thousands.md  selective_editing.md  selectiveedit.md  selectiveediting.rst  thousand_pounds.md  totalsandcomponents.rst
docs/api-docs/: date-adjustment.md  selective-edit.md  thousand-pounds.md  totals-and-components.md
docs/release-notes/: 1.0.0.md  1.1.0.md
docs/technical-specifications/: date-adjustment.md  selective-edit.md  thousand-pounds.md  totals-and-components.md
layout/: _template.njk
methods/: selective_editing.py
release-notes/1.0.0/: index.html
release-notes/1.1.0/: index.html
selectiveedit/: index.html
sml_builder/templates/: base.html  main.html
sml_small/: TCC_test_data_demo.csv  date_adjustment.py  logging.conf  selective_editing.py
sml_small/editing/: __init__.py
sml_small/pounds_thousands/: example.py  pounds_thousands.py  readme.md
sml_small/thousand_pounds/: example.py  readme.md  thousand_pounds.py
sml_small/totals_and_components/: TCC_test_data_demo.csv  TCC_test_data_demo2.csv  TCC_test_data_demo_processed.csv  TCC_test_data_demo_processed_in_memory.csv  example.py  pandas_wrapper.py  totals_and_components.py  wrapper.md  wrapper.py
sml_small/utils/: __init__.py  common_utils.py  error_utils.py  pandas_example.py  pandas_wrapper.py
smls/methods/: date_adjustment.py
tests/: .coverage  .coveragerc  README.md  TEST-test_date_adjustment.MissingValueSubfunction-20230111105813.xml  TEST-test_date_adjustment.TestAverageWeeklySubfunction-20230111105813.xml  TEST-test_date_adjustment.TestDateAdjustment-20230111105813.xml  TEST-test_date_adjustment.TestDateAdjustmentSubfunction-20230111105813.xml  TEST-test_date_adjustment.TestGenerateAverageWeeklyQuestions-20230111105813.xml  TEST-test_date_adjustment.TestMidpointSubfunction-20230111105813.xml  TEST-test_date_adjustment.TestPrimaryWranglerSubfunction-20230111105813.xml  TEST-test_date_adjustment.TestSecondaryWranglerSubfunction-20230111105813.xml  TEST-test_date_adjustment.UserAcceptanceTesting-20230111105813.xml  TEST-test_selective_editing.TestSelectiveEditing-20230111105813.xml  junit.xml  test_date_adjustment.py  test_selective_editing.py
thousand_pounds/: index.html
totalsandcomponents/: index.html
(+167 files in other folders)
