[tool.poetry]
name = "sml_small"
version = "1.1.0rc8"
description = "SML Small (Python Pandas methods)"
authors = []
readme= "README.md"
exclude = [
    "sml_small/editing/totals_and_components/example.py",
    "sml_small/editing/totals_and_components/pandas_example.py",
    "sml_small/editing/thousand_pounds/example.py"
]

[tool.poetry.dependencies]
python = "^3.7.1"
pandas = "^1.3.5"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
isort = "^5.11.5"
pytest = "^7.2.1"
coverage = "^7.0"
pytest-cov = "^4.0.0"
pytest-dependency = "^0.5.1"
pytest-tap = "^3.3"
black = "*"
tabulate = "^0.9.0"
bandit = "^1.7.5"

[tool.bandit]
exclude_dirs = ["tests"]

[tool.pytest.ini_options]
junit_test_suite_name = "sml_small"
addopts = "--cov=sml_small --cov-fail-under=90 --cov-config=.coveragerc"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
