[tool.poetry]
name = "sml_small"
version = "1.2.4"
description = "SML Small (Python Pandas methods)"
authors = []
readme= "README.md"
exclude = [
    "sml_small/editing/totals_and_components/example.py",
    "sml_small/editing/totals_and_components/pandas_example.py",
    "sml_small/editing/thousand_pounds/example.py"
]

[tool.poetry.dependencies]
python = "^3.11, <= 3.13"
pandas = "^1.3.5"
regex = "^2024.4.16"
numpy = "^1.26.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
isort = ">=5.11.5,<7.0.0"
pytest = ">=7.4,<9.0"
coverage = "^7.0"
pytest-cov = ">=4.1,<7.0"
pytest-dependency = ">=0.5.1,<0.7.0"
pytest-tap = "^3.3"
black = "25.1.0"
tabulate = "^0.9.0"
bandit = "^1.7.5"
datatest = "^0.11.1"

[tool.bandit]
exclude_dirs = ["tests"]

[tool.isort]
profile="black"
known_third_party=["boto3","moto","pandas","numpy"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
